landing page completed

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,226 @@
       />
       <title>Typemaster landing page</title>
    </head>
-   <body></body>
+   <body class="font-barlow overflow-x-hidden">
+      <!-- Header Start -->
+      <header
+         class="wrapper flex items-center justify-between py-6 px-6 lg:px-0 lg:py-10"
+      >
+         <img src="./assets/shared/logo.svg" alt="" />
+         <button
+            class="btn bg-neutralLight text-secondary hover:bg-secondary hover:text-white"
+         >
+            Pre-order Now
+         </button>
+      </header>
+      <!-- Header End -->
+
+      <!-- Hero Start -->
+      <div class="relative">
+         <div class="wrapper grid lg:grid-cols-2 mt-10">
+            <div class="px-6 py-12 lg:px-0 lg:pr-16">
+               <h1 class="text-5xl mb-8">Typemaster <br />Keyboard</h1>
+               <p class="mb-8">
+                  Improve your productivity and gaming without breaking the
+                  bank. Upgrade to a high quality mechanical typing experience.
+               </p>
+               <div class="mb-4">
+                  <button
+                     class="btn bg-primary text-white mr-8 hover:bg-opacity-70"
+                  >
+                     Pre-order Now
+                  </button>
+                  <span class="font-black text-grayColor">Release on 5/27</span>
+               </div>
+            </div>
+            <div class="pl-6">
+               <!-- mobile -->
+               <img
+                  src="./assets/mobile/image-keyboard.jpg"
+                  alt="image-keyboard"
+                  class="img rounded-l-3xl lg:hidden"
+               />
+               <!-- desktop -->
+               <img
+                  src="./assets/desktop/image-keyboard.jpg"
+                  alt="image-keyboard"
+                  class="rounded-3xl hidden lg:block"
+               />
+            </div>
+         </div>
+
+         <svg
+            class="hidden lg:block absolute w-full transform -translate-x-32 left-full top-0"
+            width="255"
+            height="240"
+            xmlns="http://www.w3.org/2000/svg"
+         >
+            <rect
+               width="255"
+               height="240"
+               rx="20"
+               fill="#E8EFF2"
+               fill-rule="evenodd"
+            />
+         </svg>
+      </div>
+      <!-- Hero End -->
+
+      <!-- Mechanical Section Start -->
+      <div class="relative">
+         <div class="wrapper grid lg:grid-cols-3 pt-8 relative lg:gap-14">
+            <div class="flex gap-8 pr-8 lg:p-0 lg:col-span-2 lg:gap-16">
+               <div class="image-gradient">
+                  <!-- mobile -->
+                  <img
+                     src="./assets/mobile/image-phone-and-keyboard.jpg"
+                     alt="image-phone-and-keyboard"
+                     class="img rounded-r-3xl object-cover h-56 lg:hidden"
+                  />
+                  <!-- desktop -->
+                  <img
+                     src="./assets/desktop/image-phone-and-keyboard.jpg"
+                     alt="image-phone-and-keyboard"
+                     class="hidden lg:block rounded-3xl object-cover h-full"
+                  />
+               </div>
+               <div class="w-full lg:w-fit">
+                  <!-- mobile -->
+                  <img
+                     src="./assets/mobile/image-glass-and-keyboard.jpg"
+                     alt="image-glass-and-keyboard"
+                     class="img rounded-3xl object-cover h-56 lg:hidden"
+                  />
+                  <!-- desktop -->
+                  <img
+                     src="./assets/desktop/image-glass-and-keyboard.jpg"
+                     alt="image-glass-and-keyboard"
+                     class="hidden lg:block rounded-3xl object-cover h-full"
+                  />
+               </div>
+            </div>
+            <div
+               class="px-6 py-20 text-center lg:col-span-1 lg:text-left lg:justify-end lg:pb-0"
+            >
+               <h2 class="text-4xl mb-8">
+                  Mechanical <br />
+                  Wireless Keyboard
+               </h2>
+               <p>
+                  The Typemaster keyboard boasts top-notch build and practical
+                  design. It offers a wide variety of switches and keycaps,
+                  along with reliable wireless connectivity.
+               </p>
+            </div>
+         </div>
+         <svg
+            class="test hidden lg:inline-block absolute w-full transform -translate-x-32 bottom-0"
+            width="255"
+            height="240"
+            xmlns="http://www.w3.org/2000/svg"
+         >
+            <rect
+               width="255"
+               height="240"
+               rx="20"
+               fill="#E8EFF2"
+               fill-rule="evenodd"
+            />
+         </svg>
+      </div>
+      <!-- Mechanical Section End -->
+
+      <!-- Features Grid Start -->
+      <div
+         class="wrapper grid gap-14 py-14 px-6 md:grid-cols-2 lg:grid-cols-4 lg:gap-5 lg:py-28 lg:px-0"
+      >
+         <!-- Card Start -->
+         <div class="feature">
+            <div class="feature-icon">
+               <img
+                  src="./assets/shared/icon-compatible.svg"
+                  alt="Highly compatible"
+               />
+            </div>
+            <h3>
+               Highly <br />
+               compatible
+            </h3>
+            <p>
+               Easy to use and works well with all major computer brands, gaming
+               consoles and mobile devices. Plug & play, no installation or
+               driver needed.
+            </p>
+         </div>
+         <!-- Card End -->
+
+         <!-- Card Start -->
+         <div class="feature">
+            <div class="feature-icon">
+               <img
+                  src="./assets/shared/icon-bluetooth.svg"
+                  alt="Wireless with Bluetooth"
+               />
+            </div>
+            <h3>
+               Wireless <br />
+               with Bluetooth
+            </h3>
+            <p>
+               Powerful 2.4G RF technology allows you to connect the cordless
+               keyboard from up to 30ft away. Simply plug the unifying receiver
+               into your computer.
+            </p>
+         </div>
+         <!-- Card End -->
+
+         <!-- Card Start -->
+         <div class="feature">
+            <div class="feature-icon">
+               <img
+                  src="./assets/shared/icon-battery.svg"
+                  alt="High Capacity Battery"
+               />
+            </div>
+            <h3>
+               High Capacity<br />
+               Battery
+            </h3>
+            <p>
+               Equipped with a long-lasting built-in battery, you’ll never have
+               to spend a dime on replaceable ones. Enjoy 40 hours of usage time
+               between charges.
+            </p>
+         </div>
+         <!-- Card End -->
+
+         <!-- Card Start -->
+         <div class="feature">
+            <div class="feature-icon">
+               <img
+                  src="./assets/shared/icon-light.svg"
+                  alt="RGB backlit Modes"
+               />
+            </div>
+            <h3>
+               RGB Backlit<br />
+               Modes
+            </h3>
+            <p>
+               Choose from 4 backlight brightness levels and adjustable
+               breathing speed. Each key glows intensely in the dark and helps
+               you type in low light conditions.
+            </p>
+         </div>
+         <!-- Card End -->
+      </div>
+      <!-- Features Grid End -->
+
+      <footer class="wrapper px-6 py-6 text-center lg:px-0 lg:pb-8">
+         <p>
+            <span class="font-black">Typemaster 2021</span>
+            <span class="mx-4">|</span> All Rights Reserved
+         </p>
+      </footer>
+   </body>
 </html>
